feat(permission): update put permissions
